--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>AWS Amplify Vue Sample</title>
   </head>
   <body>
+      <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.13/webcomponents-lite.js"></script>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
